--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "adb kill-server && scrcpy -Sw --no-audio & yarn android"
   },
   "dependencies": {
     "expo": "~54.0.31",
