--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onebitcode",
+  "name": "calculadoraimc",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.js",
@@ -11,6 +11,7 @@
     "dev": "adb kill-server && scrcpy -Sw --no-audio & yarn android"
   },
   "dependencies": {
+    "eas-cli": "^16.28.0",
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
